Refactor GeoIP, More ipqs work